--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;900&family=Changa:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="website-color.css">
-    
+    <!-- Social sharing meta tags -->
+    <meta property="og:title" content="MIDDLE EAST RP - أفضل سيرفر FiveM">
+    <meta property="og:description" content="انضم إلى أفضل سيرفر FiveM في الشرق الأوسط.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="BANER_ME.png">
+    <meta property="og:image:alt" content="MIDDLE EAST RP Banner">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MIDDLE EAST RP - أفضل سيرفر FiveM">
+    <meta name="twitter:description" content="انضم إلى أفضل سيرفر FiveM في الشرق الأوسط.">
+    <meta name="twitter:image" content="BANER_ME.png">
+    <link rel="image_src" href="BANER_ME.png">
+
     <style>
         * {
             margin: 0;
