--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <meta property="og:title" content="MIDDLE EAST RP - أفضل سيرفر FiveM">
     <meta property="og:description" content="انضم إلى أفضل سيرفر FiveM في الشرق الأوسط.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="BANER_ME.png">
+    <meta property="og:image" content="https://mdelrp.netlify.app/BANER_ME.png">
     <meta property="og:image:alt" content="MIDDLE EAST RP Banner">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:url" content="https://mdelrp.netlify.app/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="MIDDLE EAST RP - أفضل سيرفر FiveM">
     <meta name="twitter:description" content="انضم إلى أفضل سيرفر FiveM في الشرق الأوسط.">
-    <meta name="twitter:image" content="BANER_ME.png">
-    <link rel="image_src" href="BANER_ME.png">
+    <meta name="twitter:image" content="https://mdelrp.netlify.app/BANER_ME.png">
+    <link rel="image_src" href="https://mdelrp.netlify.app/BANER_ME.png">
 
     <style>
         * {
